# myarchinstall

./: Cargo.toml  Dockerfile  README.md  Untitled Diagram.drawio  docker-compose.yml  setup.toml
.github/workflows/: myarchinstall_tests.yml  rust.yml
src/: configuration_log.rs  error.rs  lib.rs  main.rs  prelude.rs  starting_config.rs
src/config_timezone/: mod.rs  set_timezone.rs
src/configs/: setup.toml  state.json
src/configure_hostname/: mod.rs  set_hostname.rs
src/configure_keymaps/: mod.rs  set_keymaps.rs
src/configure_location/: mod.rs  set_keymaps.rs  set_language.rs
src/configure_new_user/: mod.rs  set_new_user.rs
src/configure_root/: mod.rs  set_root.rs
src/configure_timezone/: set_timezone.rs
src/errors/: mod.rs  structure_error.rs
src/functions/: configuration_log.rs  create_path.rs  mod.rs  relative_path.rs  run_commands.rs  run_password_command.rs  state.rs
src/install_packages/: configure_bootloader.rs  install_essentials.rs  mod.rs
src/structure_config/: config_path.rs  location.rs  mod.rs  packages.rs  starting_config.rs  structs_opition.rs  structs_result.rs  system.rs  timezone.rs
