[package]
name = "myarchinstall"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38"}
chrono-tz = { version = "0.10.0"}
dotenv = "0.15.0"
log = "0.4.22"
serde = { version = "1.0.214", features = [ "derive" ] }
serde_json = "1.0.132"
simplelog = "0.12.2"
thiserror = "2.0.3"
toml = "0.8.19"

[dev-dependencies]
tempfile = "3.14.0"